# cli

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: custom.md  issue-template.md
.workflows/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
src/: commands.rs  errors.rs  main.rs  services.rs  ui.rs
