[package]
name = "Service-Control"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = { version = "0.29.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
unicode-width = "0.2.0"

[[bin]]
name = "cli"
path = "src/main.rs"
